# resume-analysis-tool

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  tailwind.config.js
app/: main.py
app/services/: document_parser.py  graph.py  utils.py
app/templates/: base.html
app/templates/analysis/: index.html
app/templates/static/css/: input.css  output.css
tests/: test_endpoints.py
tests/fixtures/: sample.txt
tests/test_services/: test_document_parser.py
